fazendo o crud da nacionalidade
